eosio_numstr_macros/tests/ui/symbol-bad-precision.stderr
error: unexpected end of input, precision of 256 is too large; must be <= 255
 --> $DIR/symbol-bad-precision.rs:6:13
  |
6 |     let _ = s!(256, EOS);
  |             ^^^^^^^^^^^^
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
